# RhythmGame

./: .gitignore  CMakeLists.txt  build.bat  build.sh
include/: InputManager.hpp  Renderer.hpp  Window.hpp
include/GameObjects/: ColorCube.hpp
include/types/: TextObject.hpp  Vector2.hpp
include/utils/: Crashlog.hpp  dirs.hpp
src/: InputManager.cpp  Renderer.cpp  Window.cpp  main.cpp
